<resources>
    <string name="app_name">AndroidFlux</string>
    <string name="action_settings">Settings</string>
    <string name="title">API Demo</string>
    <string name="voice_code_title">Voice Code Demo</string>
    <string name="experience_voice_code">Experience Voice Code</string>
    <string name="phone">Phone Number:</string>
    <string name="phone_hint">Please input phone number</string>
    <string name="voice_code">Voice Code:</string>
    <string name="voice_code_hint">Please input voice code</string>
    <string name="voice_receive">Voice Receive</string>
    <string name="verify">Verify</string>
    <string name="get_verifycode_success">Get VerifyCode Success</string>
    <string name="call_out_success">Call out success,please accept the call!</string>
    <string name="create_telconf_suc">Create telConference successfully!</string>
    <string name="loading_tip">Loading,please wait......</string>
    <string name="verify_success">Verify Success</string>
    <string name="verify_failed">Verify Failed</string>
    <string name="twoway_call_title">App Two Way Call</string>
    <string name="phone1">phone1:</string>
    <string name="phone2">phone2:</string>
    <string name="phone3">phone3:</string>
    <string name="start_call">Start Call</string>
    <string name="call_fail">Request Two-Way Call Failed</string>
    <string name="tel_conference">Tel Conference</string>
    <string name="create_conference">Create Conference</string>
    <string name="voice_notify">Voice Notify</string>
    <string name="voice_notify_tip">Analog credit card billing telephone automatic voice reminder</string>
    <string name="voice_notify_text">Voice Notify (Text can be modified)</string>
    <string name="voice_notify_receive">Voice Notify Receive</string>
    <string name="notify_text_hint">Dear Zhangsan, your credit card is the tail number 2099 of the period of Agricultural Bank should repayment for 2299 yuan</string>
    <string name="create_num_pair">Create Number Pair</string>
    <string name="match_number">Match Number Pair</string>
    <string name="create_group">Create Group</string>
    <string name="get_free_num">Get Free Number</string>
    <string name="match_number_tip">Simulated real estate buyers and sellers anonymous calls\n\r\n\rEnter the seller and buyer number</string>
    <string name="seller_phone">Seller Phone</string>
    <string name="buyer_phone">Buyer Phone</string>
    <string name="enter_attendance_phone">Enter attendance phone</string>
    <string name="create_group_tip">Please enter group name</string>
    <string name="enter_group_name_tip">Please enter group name</string>
    <string name="query_free_numbers">Query Free Numbers</string>
    <string name="number_list_tip">Number list as</string>
    <string name="account_name">Account Name</string>
    <string name="enter_account_name">Please enter account name</string>
    <string name="phone_number">Phone</string>
    <string name="email">Email</string>
    <string name="emial_hint">Please input email address</string>
    <string name="create_subaccount">Create SubAccount</string>
    <string name="query_subaccounts">Query SubAccounts</string>
    <string name="call_center">Call Ceter</string>
    <string name="manage_user">Manage User</string>
    <string name="create_user">Create User</string>
    <string name="call_center_tips">Call Center\nThe new user must be activated before using</string>
    <string name="activate_user">Activate User</string>
    <string name="call_out">Call Out</string>
    <string name="user_number">User Number</string>
    <string name="user_phone">User Phone</string>
    <string name="work_number_tip">Please input work number</string>
    <string name="current_user">Current User</string>
    <string name="call_out_phone">Call out number</string>
    <string name="upload_success">Upload successfully</string>
    <string name="request_success">Request successfully</string>
    <string name="match_num_success">Match number successfully</string>
    <string name="create_group_success">Create group successfully</string>
    <string name="query_number_success">Query free number successfully</string>
    <string name="create_sub_account_suc">Create subAccount successfully</string>
    <string name="query_sub_account_suc">Query subAccount successfully</string>
    <string name="activate_success">Activate successfully</string>
    <string name="create_user_suc">Create user successfully</string>
    <string name="fetching_work_num">Fetching workNumber,please wait</string>
    <string name="fetch_worknum_failed">Fetch failed</string>
</resources>
