<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTipBg">


    <include
        android:id="@+id/create_subaccount_title"
        layout="@layout/base_header"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <RelativeLayout
        android:id="@+id/rl_account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/create_subaccount_title">

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorLine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:layout_below="@+id/line"
            android:text="@string/account_name"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/et_account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="end"
            android:padding="12dp"
            android:hint="@string/enter_account_name" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_account_name">

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorLine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:layout_below="@+id/line1"
            android:text="@string/phone"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="end"
            android:padding="12dp"
            android:hint="@string/phone_hint" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_phone">

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorLine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:layout_below="@+id/line2"
            android:text="@string/email"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="end"
            android:padding="12dp"
            android:inputType="textEmailAddress"
            android:hint="@string/emial_hint" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/et_email"
            android:background="@color/colorLine"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_create_subaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_bg"
        android:layout_below="@+id/rl_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <View
            android:id="@+id/line_receive1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorLine" />

        <TextView
            android:id="@+id/tv_create_subaccount"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/create_subaccount"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="17sp" />

        <View
            android:id="@+id/line_receive2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/tv_create_subaccount"
            android:background="@color/colorLine" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_query_subaccounts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_bg"
        android:layout_below="@+id/rl_create_subaccount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <View
            android:id="@+id/line_receive3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorLine" />

        <TextView
            android:id="@+id/tv_query_subaccounts"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/query_subaccounts"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="17sp" />

        <View
            android:id="@+id/line_receive4"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/tv_query_subaccounts"
            android:background="@color/colorLine" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_show_subaccounts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_query_subaccounts"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:padding="12dp"/>



</RelativeLayout>