<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTipBg">


    <include
        android:id="@+id/create_subaccount_title"
        layout="@layout/base_header"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <RelativeLayout
        android:id="@+id/rl_user_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/create_subaccount_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorLine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:layout_below="@+id/line"
            android:text="@string/user_number"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/et_user_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="end"
            android:padding="12dp"
            android:hint="@string/work_number_tip" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_user_number">

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorLine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:layout_below="@+id/line1"
            android:text="@string/user_phone"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/et_user_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="end"
            android:padding="12dp"
            android:hint="@string/phone_hint" />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/et_user_phone"
            android:background="@color/colorLine" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_bg"
        android:layout_below="@+id/rl_user_phone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <View
            android:id="@+id/line_receive3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorLine" />

        <TextView
            android:id="@+id/tv_create"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/create_user"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="17sp" />

        <View
            android:id="@+id/line_receive4"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/tv_create"
            android:background="@color/colorLine" />

    </RelativeLayout>



</RelativeLayout>